# SAMYUseCases

./: .gitignore  README.md  types_crcl_generated.h
BPMNControllerTestUseCase/: docker-compose.yaml
BPMNControllerTestUseCase/configFiles/: BPMNbasedController_Configuration_File.yaml  DataBaseFile.yaml  InformationSources.yaml  RobotsConfiguration.yaml  SAMYCoreConfig.yaml  Test_BPMN_no_parallel.diagram  start.sh
BPMNControllerTestUseCase/configFiles/Skills/GetPose/: CMakeLists.txt  SkillConfig.yaml  getPose.cpp  getPose.h
BPMNControllerTestUseCase/configFiles/Skills/GripperApproach/: CMakeLists.txt  SkillConfig.yaml  gripperApproach.cpp  gripperApproach.h
BPMNControllerTestUseCase/configFiles/Skills/GripperAttach/: CMakeLists.txt  SkillConfig.yaml  gripperAttach.cpp  gripperAttach.h
BPMNControllerTestUseCase/configFiles/Skills/MoveSkill/: CMakeLists.txt  move.h
BPMNControllerTestUseCase/configFiles/Skills/PickSkill/: pick.h
FJMayer/: docker-compose.yaml
FJMayer/configFiles/: BPMNbasedController_Configuration_File.yaml  DataBaseFile.yaml  Diagram_complete.diagram  InformationSources.yaml  RobotsConfiguration.yaml  fjm.diagram  start.sh
FJMayer/configFiles/Skills/CheckPalletSkill/: CMakeLists.txt  SkillConfig.yaml  checkPallet.cpp  checkPallet.h
FJMayer/configFiles/Skills/MoveSkill/: SkillConfig.yaml  move.cpp
FJMayer/configFiles/Skills/PickSkill/: pick.cpp
FJMayer/configFiles/Skills/PlaceGridSkill/: SkillConfig.yaml  placeGrid.cpp  placeGrid.h
FJMayer/configFiles/Skills/PlaceSkill/: place.cpp
HenkelUseCase/: docker-compose.yaml
HenkelUseCase/configFiles/: DataBaseFile.yaml  HenkelUseCase.diagram  HenkelUseCase_old.diagram  RobotsConfiguration.yaml  start.sh
HenkelUseCase/configFiles/Skills/: createStructure.py
HenkelUseCase/configFiles/Skills/MoveSkill/: move.cpp
HenkelUseCase/configFiles/Skills/PickSkill/: CMakeLists.txt  SkillConfig.yaml  pick.cpp
HenkelUseCase/configFiles/Skills/PlaceSkill/: CMakeLists.txt  SkillConfig.yaml
PlaceGridUseCase/: docker-compose.yaml
PlaceGridUseCase/configFiles/: DataBaseFile.yaml  Palletieren.diagram  PalletierenTest.diagram  RobotsConfiguration.yaml  SAMYCoreConfig.yaml  start.sh
PlaceGridUseCase/configFiles/Skills/PlaceGridSkill/: CMakeLists.txt  SkillConfig.yaml  placeGrid.cpp  placeGrid.h
PlaceGridUseCase/configFiles/Skills/PlaceSkill/: place.h
SAMYPlugIn_ABB/: PlugIn_Executable_Link  Readme.m  plugin.py
SAMYPlugIn_ABB/CRCLLib/: crcl.py
SAMYPlugIn_ABB/RobotLib/: robot.py
SAMYPlugIn_ABB/TransformLib/: transform.py
SAMYPlugIn_Extruder/: CMakeLists.txt  SAMYPlugin_Template.c  SAMYPlugin_Template.h  main.c  main_Test_Unions_Local.cpp
SAMYPlugIn_Extruder/Robot/: Robot.c  Robot.cpp
SAMYPlugIn_Extruder/Robot/include/: Robot.h
SAMYPlugIn_Extruder/Template_internals/Communication/: Publisher.c  SAMYRobot.c  Subscriber.c
SAMYPlugIn_Extruder/Template_internals/Communication/include/: Publisher.h  SAMYRobot.h  Subscriber.h
SAMYPlugIn_Extruder/Template_internals/OPCUA_CRCL/OPCUAModel/: CompileModel.sh  Readme.m
SAMYPlugIn_Extruder/Template_internals/OPCUA_CRCL/OPCUAModel/Published/: CRCL_OPCUA\CRCL.NodeIds.csv
SAMYPlugIn_Extruder/Template_internals/OPCUA_CRCL/OPCUAModel/Published/CRCL_OPCUA/: CRCL.DataTypes.cs  CRCL.PredefinedNodes.xml  CRCL.Types.xsd  CRCL_OPCUA.csv
SAMYPlugIn_Extruder/Template_internals/OPCUA_CRCL/model/Published/: CRCL.Constants.cs  CRCL.NodeSet.xml  CRCL.NodeSet2.xml  CRCL.PredefinedNodes.uanodes  CRCL.Types.bsd  CRCL_OPCUA.xml
SAMYPlugIn_UR/: Readme.m  plugin.py
SAMYPlugIn_UR/CRCLLib/: __init__.py  crclCommands(from github).py  translator(old).py
SAMYPlugIn_UR/RobotLib/: RTDE_conf.xml  __init__.py  exchangeData.py  realmon.py  robot.py
SAMYPlugIn_UR/TransformLib/: transform.py
SAMYPlugIn_UR/rtde/: __init__.py  csv_binary_writer.py  csv_reader.py  csv_writer.py  rtde.py  rtde_config.py  serialize.py
Vereinzelung/: UseCaseDiagram.odg  docker-compose.yaml
Vereinzelung/configFiles/: AssemblySAMY.diagram  BPMNbasedController_Configuration_File.yaml  CameraTest.diagram  DataBaseFile.yaml  DataBaseFile_Backup.yaml  FHTW_UseCase copy.diagram  FHTW_UseCase.diagram  InformationSources.yaml  RobotsConfiguration.yaml  SAMYCoreConfig.yaml  SimpleAssembly.diagram  SimpleAssembly_Old.diagram  SimpleAssembly_OpenMan.diagram  Skills.yaml  UR5Test.diagram  UR5Test_Old.diagram  start.sh  usecase1.diagram  usecase2.diagram
Vereinzelung/configFiles/Skills/: createStructure.py
Vereinzelung/configFiles/Skills/CheckStorageSkill/: CMakeLists.txt  CheckStorage.cpp  CheckStorage.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/GetPoseSkill/: CMakeLists.txt  GetPose.cpp  GetPose.h  GetPoseSkill.cpp  GetPoseSkill.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/MoveCylinderSkill/: CMakeLists.txt  MoveCylinder.cpp  MoveCylinder.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/MoveTo2Skill/: CMakeLists.txt  MoveTo2.cpp  MoveTo2.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/MoveToSkill/: CMakeLists.txt  MoveTo.cpp  MoveTo.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/PickAndPlaceSkill/: CMakeLists.txt  PickAndPlace.cpp  PickAndPlace.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/PickSkill/: CMakeLists.txt  Pick.cpp  Pick.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/PlaceGridSkill/: CMakeLists.txt  PlaceGrid.cpp  PlaceGrid.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/PlaceSkill/: CMakeLists.txt  Place.cpp  Place.h  SkillConfig.yaml
Vereinzelung/configFiles/Skills/SetGripperSkill/: CMakeLists.txt  SetGripper.cpp  SetGripper.h  SkillConfig.yaml
script/: README.md  SkillConfig.yaml  createStructure.py
